[package]
authors = ["Daniel Stahl <danstahl1138@gmail.com>"]
edition = "2018"
name = "ops_faas"
version = "0.1.1"

[dependencies]
cf_dist_utils = "0.10"
cf_functions = "0.15"
fang_oost = "^0.15.1"
lambda_http = "0.1.1"
lambda_runtime = "0.2.1"
num-complex = "0.2"
rayon = "1.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
